k8s/src/main/k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: demo-app
   labels:
      app: demo-app
   annotations:
      description: "Deployed by Docker desktop app"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: demo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
