k8s/src/main/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: demo-app
spec:
    selector:
        app: demo-app
    ports:
      - name: http
        port: 80
        targetPort: 9090
